retrieveUnpackaged/objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Comment_Response__c</fullName>
        <label>Agency Topic Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comment_Summary__c</fullName>
        <label>Comment Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comment_Summary_status__c</fullName>
        <label>Comment Summary Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_Comments_on_this_Topic__c</fullName>
        <label>Summary of Comments on this Topic</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Number__c</fullName>
        <label>Topic Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Response_Status__c</fullName>
        <label>Topic Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Topic_Name__c</columns>
        <columns>Summary_of_Comments_on_this_Topic__c</columns>
        <columns>Agency_Comment_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <recordTypes>
        <fullName>Bristol_Bay</fullName>
        <active>true</active>
        <label>Bristol Bay</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US</fullName>
        <active>true</active>
        <label>Waters of the US</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Super_User_Edit_Topic_Name</fullName>
        <active>true</active>
        <description>Allows a Super User to edit the Topic Name</description>
        <errorConditionFormula>ISCHANGED( Name )
&amp;&amp;
Not($Permission.Edit_Topic_Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Insufficient privileges to edit the Topic Name field</errorMessage>
    </validationRules>
</CustomObject>